# mizar-evo

./: .codex  .gitignore  AGENTS.md  Cargo.toml  README.md
crates/mizar-atp/: Cargo.toml
crates/mizar-atp/src/: backend.rs  lib.rs  portfolio.rs  problem.rs  property_encoding.rs  smtlib_encoder.rs  tptp_encoder.rs  translator.rs
crates/mizar-atp/src/backend/: tests.rs
crates/mizar-atp/src/portfolio/: tests.rs
crates/mizar-atp/src/problem/: tests.rs
crates/mizar-atp/src/property_encoding/: tests.rs
crates/mizar-atp/src/smtlib_encoder/: tests.rs
crates/mizar-atp/src/tptp_encoder/: tests.rs
crates/mizar-atp/src/translator/: tests.rs
crates/mizar-atp/tests/: determinism_suite.rs  lint_policy.rs  mock_backend_corpus.rs
crates/mizar-build/: Cargo.toml
crates/mizar-build/src/: artifact_commit.rs  cache_seam.rs  cancel.rs  failure_state.rs  lib.rs  module_index.rs  planner.rs  resource.rs  scheduler.rs  task_graph.rs
crates/mizar-build/src/module_index/: tests.rs
crates/mizar-build/src/planner/: tests.rs
crates/mizar-build/src/scheduler/: tests.rs
crates/mizar-build/src/task_graph/: tests.rs
crates/mizar-build/tests/: batch_integration.rs  determinism_suite.rs  lint_policy.rs
crates/mizar-cache/: Cargo.toml
crates/mizar-cache/src/: cache_key.rs  cache_store.rs  cluster_db.rs  dependency_fingerprint.rs  lib.rs  proof_reuse.rs
crates/mizar-cache/src/cache_key/: tests.rs
crates/mizar-cache/src/cache_store/: tests.rs
crates/mizar-cache/src/cluster_db/: tests.rs
crates/mizar-cache/src/dependency_fingerprint/: tests.rs
crates/mizar-cache/src/proof_reuse/: tests.rs
crates/mizar-cache/tests/: determinism_suite.rs  incremental_contract.rs  lint_policy.rs
crates/mizar-checker/: Cargo.toml
crates/mizar-checker/src/: binding_env.rs  cluster_trace.rs  determinism_suite.rs  lib.rs  overload_resolution.rs  registration_resolution.rs  resolved_typed_ast.rs  source_attribute.rs  source_context.rs  source_evidence.rs  source_term.rs  source_type.rs  type_checker.rs  typed_ast.rs
crates/mizar-checker/tests/: lint_policy.rs
crates/mizar-core/: Cargo.toml
crates/mizar-core/src/: binder_normalization.rs  control_flow.rs  core_ir.rs  elaborator.rs  lib.rs
crates/mizar-core/tests/: determinism_suite.rs  lint_policy.rs
crates/mizar-driver/: Cargo.toml
crates/mizar-driver/src/: cli.rs  driver.rs  events.rs  lib.rs  registry.rs  request.rs
crates/mizar-driver/src/cli/: output.rs
crates/mizar-driver/src/driver/: event_log.rs  scheduler.rs  tests.rs  watch.rs
crates/mizar-driver/src/registry/: catalog.rs
crates/mizar-driver/tests/: cli.rs  determinism.rs  driver.rs  events.rs  lint_policy.rs  registry.rs  request.rs  watch.rs
crates/mizar-frontend/: Cargo.toml
crates/mizar-frontend/benches/: frontend_pipeline.rs
crates/mizar-frontend/src/: cache_key.rs  lexical_env.rs  lexing.rs  lib.rs  orchestration.rs  parsing.rs  preprocess.rs  source.rs  span_bridge.rs
crates/mizar-frontend/tests/: determinism.rs  lexical_env_resident_set.rs  lint_policy.rs
crates/mizar-ir/: Cargo.toml
crates/mizar-ir/src/: cache_adapter.rs  dispatch_input.rs  identity.rs  lib.rs  projection.rs  publisher.rs  storage.rs
crates/mizar-ir/tests/: determinism_lifetime.rs  lint_policy.rs
crates/mizar-kernel/: Cargo.toml
crates/mizar-kernel/src/: certificate_parser.rs  checker.rs  clause.rs  formula_evidence.rs  lib.rs  rejection.rs  resolution_trace.rs  sat_checker.rs  sat_encoding.rs  substitution_checker.rs
crates/mizar-kernel/src/certificate_parser/: tests.rs
crates/mizar-kernel/src/checker/: tests.rs
crates/mizar-kernel/src/clause/: tests.rs
crates/mizar-kernel/src/formula_evidence/: tests.rs
crates/mizar-kernel/src/rejection/: tests.rs
crates/mizar-kernel/src/resolution_trace/: tests.rs
crates/mizar-kernel/src/sat_checker/: tests.rs
crates/mizar-kernel/src/sat_encoding/: tests.rs
crates/mizar-kernel/src/substitution_checker/: tests.rs
crates/mizar-kernel/tests/: lint_policy.rs
crates/mizar-lexer/: Cargo.toml
crates/mizar-lexer/benches/: lexer_pipeline.rs
crates/mizar-lexer/src/: disambiguator.rs  import_prescan.rs  lexical_environment.rs  lib.rs  raw_lexer.rs  scope_skeleton.rs  source.rs  tables.rs
crates/mizar-lexer/src/tests/: common.rs  disambiguator.rs  import_prescan.rs  lexical_environment.rs  mod.rs  phase7.rs  raw_lexer.rs  scope_skeleton.rs  shell.rs  source.rs
crates/mizar-lexer/tests/: lexical_corpus.rs
crates/mizar-parser/: Cargo.toml
crates/mizar-parser/src/: cursor.rs  diagnostic.rs  event.rs  grammar.rs  lib.rs  module.rs  path.rs  pratt.rs  recovery.rs  sync.rs
crates/mizar-parser/src/module/: annotations.rs  tests.rs
crates/mizar-parser/tests/: determinism.rs  lint_policy.rs
crates/mizar-proof/: Cargo.toml
crates/mizar-proof/src/: lib.rs  policy.rs  selection.rs  status.rs  witness_store.rs
crates/mizar-proof/src/policy/: tests.rs
crates/mizar-proof/src/selection/: tests.rs
crates/mizar-proof/src/status/: tests.rs
crates/mizar-proof/src/witness_store/: tests.rs
crates/mizar-proof/tests/: determinism_suite.rs  lint_policy.rs
crates/mizar-resolve/: Cargo.toml
crates/mizar-resolve/src/: declarations.rs  env.rs  imports.rs  labels.rs  lib.rs  module_index.rs  module_summary_reuse.rs  names.rs  recovery.rs  resolved_ast.rs  symbols.rs
crates/mizar-resolve/src/declarations/: tests.rs
crates/mizar-resolve/src/env/: snapshot.rs  tests.rs
crates/mizar-resolve/src/imports/: tests.rs
crates/mizar-resolve/src/labels/: tests.rs
crates/mizar-resolve/tests/: lint_policy.rs
crates/mizar-test/: Cargo.toml
crates/mizar-test/src/: diagnostic.rs  expectation.rs  harness.rs  layout.rs  lib.rs  main.rs  path_rules.rs  runner.rs  snapshot.rs  staged_model.rs  toml_lite.rs  traceability.rs
crates/mizar-test/tests/: layout.rs  lint_policy.rs  metadata.rs  public_enum_policy.rs  snapshot.rs
doc/: README.md
fuzz/: Cargo.toml
fuzz/corpus/lexer_valid_utf8/: ascii_layout_and_annotation  comments_and_unicode
fuzz/fuzz_targets/: frontend_valid_utf8.rs  lexer_valid_utf8.rs  parser_valid_utf8.rs
(+1778 files in other folders)
