[workspace]
members = [
    "crates/mizar-frontend",
    "crates/mizar-lexer",
    "crates/mizar-lsp",
    "crates/mizar-session",
    "crates/mizar-test",
]
exclude = ["fuzz"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/hanabishi/mizar-evo"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = "deny"
# Keep pedantic out of the shared baseline for now: enabling it on mizar-session
# raises broad API-doc/style churn that is outside durable clippy::all enforcement.
