[workspace]
members = [
    "crates/mizar-artifact",
    "crates/mizar-atp",
    "crates/mizar-build",
    "crates/mizar-cache",
    "crates/mizar-checker",
    "crates/mizar-core",
    "crates/mizar-frontend",
    "crates/mizar-ir",
    "crates/mizar-kernel",
    "crates/mizar-lexer",
    "crates/mizar-lsp",
    "crates/mizar-parser",
    "crates/mizar-proof",
    "crates/mizar-resolve",
    "crates/mizar-session",
    "crates/mizar-syntax",
    "crates/mizar-test",
    "crates/mizar-vc",
]
exclude = ["fuzz"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/hanabishi/mizar-evo"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = "deny"
# Keep pedantic out of the shared baseline for now: enabling it on mizar-session
# raises broad API-doc/style churn that is outside durable clippy::all enforcement.
