[package]
name = "mizar-cache"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "mizar_cache"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
blake3 = "1.8.5"
mizar-artifact = { path = "../mizar-artifact" }
mizar-session = { path = "../mizar-session" }
