[package]
name = "mizar-checker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "mizar_checker"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mizar-resolve = { path = "../mizar-resolve" }
mizar-session = { path = "../mizar-session" }
