[package]
name = "mizar-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "mizar_core"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mizar-checker = { path = "../mizar-checker" }
mizar-resolve = { path = "../mizar-resolve" }
mizar-session = { path = "../mizar-session" }
