[package]
name = "mizar-frontend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "mizar_frontend"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mizar-lexer = { path = "../mizar-lexer" }
mizar-session = { path = "../mizar-session" }
