[package]
name = "mizar-frontend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "mizar_frontend"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
blake3 = "1.8.5"
mizar-lexer = { path = "../mizar-lexer" }
mizar-parser = { path = "../mizar-parser" }
mizar-session = { path = "../mizar-session" }
mizar-syntax = { path = "../mizar-syntax" }

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "frontend_pipeline"
harness = false
