[package]
name = "mizar-ir"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "mizar_ir"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
blake3 = "1.8.5"
mizar-artifact = { path = "../mizar-artifact" }
mizar-cache = { path = "../mizar-cache" }
mizar-session = { path = "../mizar-session" }
