[package]
name = "mizar-kernel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "mizar_kernel"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
batsat = { version = "=0.6.0", default-features = false }
mizar-core = { path = "../mizar-core" }
mizar-session = { path = "../mizar-session" }
