[package]
name = "mizar-lexer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "mizar_lexer"
path = "src/lib.rs"

[dev-dependencies]
criterion = "0.7"
mizar-test = { path = "../mizar-test" }

[[bench]]
name = "lexer_pipeline"
harness = false
