[package]
name = "mizar-parser"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "mizar_parser"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mizar-session = { path = "../mizar-session" }
mizar-syntax = { path = "../mizar-syntax" }
