[package]
name = "mizar-proof"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "mizar_proof"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mizar-artifact = { path = "../mizar-artifact" }
mizar-atp = { path = "../mizar-atp" }
mizar-kernel = { path = "../mizar-kernel" }
mizar-session = { path = "../mizar-session" }
mizar-vc = { path = "../mizar-vc" }
