[package]
name = "mizar-resolve"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "mizar_resolve"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mizar-artifact = { path = "../mizar-artifact" }
mizar-build = { path = "../mizar-build" }
mizar-session = { path = "../mizar-session" }
mizar-syntax = { path = "../mizar-syntax" }

[dev-dependencies]
semver = "1"
