[package]
name = "mizar-test"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "mizar_test"
path = "src/lib.rs"

[dependencies]
mizar-frontend = { path = "../mizar-frontend" }
mizar-session = { path = "../mizar-session" }

[[bin]]
name = "mizar-test"
path = "src/main.rs"
