[package]
name = "mizar-test"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "mizar_test"
path = "src/lib.rs"

[dependencies]
mizar-frontend = { path = "../mizar-frontend" }
mizar-resolve = { path = "../mizar-resolve" }
mizar-session = { path = "../mizar-session" }
mizar-syntax = { path = "../mizar-syntax" }

[[bin]]
name = "mizar-test"
path = "src/main.rs"
